Feature: 添加 Elment UI，i18n, 页面组件等示例
- Elemnt UI
- i18n
- 登录页面
- store 示例
- util 示例

--- a/src/assets/css/variable.scss
+++ b/src/assets/css/variable.scss
@@ -1,6 +1,8 @@
-$--color-primary: orange;
+// 主题色
+$colorPrimary: orange;
 
+// Element UI 主题色
 
 :export {
-  colorPrimary: $--color-primary;
-} 
+  colorPrimary: $colorPrimary;
+}
