--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,8 +1,24 @@
 // Style 变量
-@import './variable.scss';
+@import "./variable.scss";
+
+/* Element UI Start */
+/* 改变主题色变量 */
+$--color-primary: $colorPrimary;
 
 /* 改变 icon 字体路径变量，必需 */
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
+$--font-path: "~element-ui/lib/theme-chalk/fonts";
 
 // Eleement UI 主题
 @import "~element-ui/packages/theme-chalk/src/index";
+
+/* Element UI End */
+
+// 输入框光标颜色
+// References: https://www.zhangxinxu.com/wordpress/2018/01/css-caret-color-first-line/
+@supports (-webkit-mask: none) and (not (cater-color: $colorPrimary)) {
+  .el-input {
+    input {
+      color: $colorPrimary;
+    }
+  }
+}
