--- a/src/assets/css/variable.scss
+++ b/src/assets/css/variable.scss
@@ -3,10 +3,5 @@
  * @Description: 全局变量，变量使用小驼峰命名
  */
 
+/* 默认使用亮色主题 */
 @import "./color-light.scss";
-
-// Element UI 主题色
-
-:export {
-  colorPrimary: $colorPrimary;
-}
