--- a/src/assets/css/variable.scss
+++ b/src/assets/css/variable.scss
@@ -4,10 +4,8 @@
  */
 
 /* 默认使用亮色主题 */
-@import "./color-light.scss";
-
-
+// @import "./color-light.scss";
 
 $borderRadius: 8px; // 圆角半径
 
-$gutter: 8px; // 单倍间距
+$gutter: 8px; // 单倍间距:
